Fix text-align left for right

--- a/css/header.css
+++ b/css/header.css
@@ -112,10 +112,9 @@
 .header-phone__text {
     margin-bottom: 1px;
     font-size: 15px;
-    font-style: normal;
     font-weight: 400;
     line-height: 20px;
-    text-align: left;
+    text-align: right;
     color: rgba(153, 153, 153, 1);
 }
 
